Implement SMA for graph and add separate modules.

--- a/trading-view-bot-ui/src/app/app.component.html
+++ b/trading-view-bot-ui/src/app/app.component.html
@@ -40,6 +40,15 @@
     </mat-form-field>
 
     <mat-form-field>
+      <mat-label>SMA</mat-label>
+      <input
+        matInput
+        formControlName="sma"
+        placeholder="SMA"
+        value="0"
+      />
+    </mat-form-field>
+    <mat-form-field>
       <mat-label>Color</mat-label>
       <input
         matInput
@@ -103,6 +112,15 @@
           {{ candleSize }}
         </mat-option>
       </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>SMA</mat-label>
+      <input
+        matInput
+        formControlName="sma"
+        placeholder="SMA"
+        value="0"
+      />
     </mat-form-field>
     <mat-form-field>
       <mat-label>Color</mat-label>
