--- a/trading-view-bot-ui/src/app/chart/chart.component.html
+++ b/trading-view-bot-ui/src/app/chart/chart.component.html
@@ -1,1 +1,12 @@
-<p>chart works!</p>
+<div style="width: 100%;">
+  <canvas
+    *ngIf="anyChartLoaded"
+    baseChart
+    [chartType]="'line'"
+    [datasets]="chartData"
+    [options]="chartOptions"
+    [legend]="true"
+  >
+  </canvas>
+  <p *ngIf="!anyChartLoaded">No data to display</p>
+</div>
