--- a/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
+++ b/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
@@ -1,1 +1,51 @@
-<p>add-indicator-form works!</p>
+<form
+  [formGroup]="addIndicatorForm"
+  (ngSubmit)="onAddIndicator(addIndicatorForm.value)"
+>
+  <app-date-span-picker formControlName="dateSpan"></app-date-span-picker>
+  <mat-form-field>
+    <mat-label>Market</mat-label>
+    <mat-select formControlName="market">
+      <mat-option *ngFor="let market of indicatorMarkets" [value]="market">
+        {{ market }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Indicator</mat-label>
+    <mat-select formControlName="indicator">
+      <mat-option *ngFor="let indicator of indicatorNames" [value]="indicator">
+        {{ indicator }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Candle sizes</mat-label>
+    <mat-select formControlName="candleSize">
+      <mat-option
+        *ngFor="let candleSize of indicatorCandleSizes"
+        [value]="candleSize"
+      >
+        {{ candleSize }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>SMA</mat-label>
+    <input matInput formControlName="sma" placeholder="SMA" value="0" />
+  </mat-form-field>
+  <mat-form-field>
+    <mat-label>Color</mat-label>
+    <input
+      matInput
+      formControlName="color"
+      placeholder="Color"
+      value="225,100,100"
+    />
+  </mat-form-field>
+  <button>
+    Add indicator
+  </button>
+</form>
