--- a/trading-view-bot-ui/src/app/app.component.html
+++ b/trading-view-bot-ui/src/app/app.component.html
@@ -1,120 +1,5 @@
 <div style="width: 100%;">
   <app-chart></app-chart>
-  <form
-    [formGroup]="addTickerForm"
-    (ngSubmit)="onAddTicker(addTickerForm.value)"
-  >
-    <mat-form-field>
-      <mat-label>Start date</mat-label>
-      <input matInput formControlName="startDate" [matDatepicker]="tsdpicker" />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="tsdpicker"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #tsdpicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>End date</mat-label>
-      <input matInput formControlName="endDate" [matDatepicker]="tedpicker" />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="tedpicker"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #tedpicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Market</mat-label>
-      <mat-select formControlName="market">
-        <mat-option *ngFor="let market of tickerMarkets" [value]="market">
-          {{ market }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>SMA</mat-label>
-      <input matInput formControlName="sma" placeholder="SMA" value="0" />
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Color</mat-label>
-      <input
-        matInput
-        formControlName="color"
-        placeholder="Color"
-        value="225,100,100"
-      />
-    </mat-form-field>
-    <button>Add ticker</button>
-  </form>
-  <form
-    [formGroup]="addIndicatorForm"
-    (ngSubmit)="onAddIndicator(addIndicatorForm.value)"
-  >
-    <mat-form-field>
-      <mat-label>Start date</mat-label>
-      <input matInput formControlName="startDate" [matDatepicker]="isdpicker" />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="isdpicker"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #isdpicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>End date</mat-label>
-      <input matInput formControlName="endDate" [matDatepicker]="iedpicker" />
-      <mat-datepicker-toggle
-        matSuffix
-        [for]="iedpicker"
-      ></mat-datepicker-toggle>
-      <mat-datepicker #iedpicker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Market</mat-label>
-      <mat-select formControlName="market">
-        <mat-option *ngFor="let market of indicatorMarkets" [value]="market">
-          {{ market }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>Indicator</mat-label>
-      <mat-select formControlName="indicator">
-        <mat-option
-          *ngFor="let indicator of indicatorNames"
-          [value]="indicator"
-        >
-          {{ indicator }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-
-    <mat-form-field>
-      <mat-label>Candle sizes</mat-label>
-      <mat-select formControlName="candleSize">
-        <mat-option
-          *ngFor="let candleSize of indicatorCandleSizes"
-          [value]="candleSize"
-        >
-          {{ candleSize }}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>SMA</mat-label>
-      <input matInput formControlName="sma" placeholder="SMA" value="0" />
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Color</mat-label>
-      <input
-        matInput
-        formControlName="color"
-        placeholder="Color"
-        value="225,100,100"
-      />
-    </mat-form-field>
-    <button>
-      Add indicator
-    </button>
-  </form>
+  <app-add-ticker-form></app-add-ticker-form>
+  <app-add-indicator-form></app-add-indicator-form>
 </div>
