Loading spinner was added. refs #802

--- a/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
+++ b/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
@@ -1,4 +1,5 @@
 <form
+  *ngIf="!loading"
   [formGroup]="addIndicatorForm"
   (ngSubmit)="onAddIndicator(addIndicatorForm.value)"
 >
@@ -49,3 +50,4 @@
     Add indicator
   </button>
 </form>
+<mat-spinner *ngIf="loading"></mat-spinner>
