Add spinner and step. refs #790

--- a/trading-view-bot-ui/src/app/add-ticker-form/add-ticker-form.component.html
+++ b/trading-view-bot-ui/src/app/add-ticker-form/add-ticker-form.component.html
@@ -18,6 +18,10 @@
     <input matInput formControlName="sma" placeholder="SMA" value="0" />
   </mat-form-field>
   <mat-form-field>
+    <mat-label>Step</mat-label>
+    <input matInput formControlName="step" value="1" />
+  </mat-form-field>
+  <mat-form-field>
     <mat-label>Color</mat-label>
     <input
       matInput
