--- a/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
+++ b/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
@@ -37,7 +37,7 @@
   <mat-form-field>
     <mat-label>Filter type</mat-label>
     <mat-select formControlName="filterType">
-      <mat-option *ngFor="let filterType of filterTypes" value="sma">
+      <mat-option *ngFor="let filterType of filterTypes" [value]="filterType">
         {{ filterType }}
       </mat-option>
     </mat-select>
