--- a/trading-view-bot-ui/src/app/date-span-picker/date-span-picker.component.html
+++ b/trading-view-bot-ui/src/app/date-span-picker/date-span-picker.component.html
@@ -5,6 +5,7 @@
       matInput
       formControlName="startDate"
       [matDatepicker]="startDatePicker"
+      [(ngModel)]="start"
     />
     <mat-datepicker-toggle
       matSuffix
@@ -14,7 +15,12 @@
   </mat-form-field>
   <mat-form-field>
     <mat-label>End date</mat-label>
-    <input matInput formControlName="endDate" [matDatepicker]="endDatePicker" />
+    <input
+      matInput
+      formControlName="endDate"
+      [matDatepicker]="endDatePicker"
+      [(ngModel)]="end"
+    />
     <mat-datepicker-toggle
       matSuffix
       [for]="endDatePicker"
