--- a/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
+++ b/trading-view-bot-ui/src/app/add-indicator-form/add-indicator-form.component.html
@@ -57,6 +57,7 @@
       formControlName="color"
       placeholder="Color"
       value="225,100,100"
+      [(ngModel)]="color"
     />
   </mat-form-field>
   <button>
