--- a/trading-view-bot-ui/src/app/add-ticker-form/add-ticker-form.component.html
+++ b/trading-view-bot-ui/src/app/add-ticker-form/add-ticker-form.component.html
@@ -36,6 +36,7 @@
       formControlName="color"
       placeholder="Color"
       value="225,100,100"
+      [(ngModel)]="color"
     />
   </mat-form-field>
   <button>Add ticker</button>
