--- a/trading-view-bot-ui/src/app/app.component.html
+++ b/trading-view-bot-ui/src/app/app.component.html
@@ -1,5 +1,2 @@
-<div style="width: 100%;">
-  <app-chart></app-chart>
-  <app-add-ticker-form></app-add-ticker-form>
-  <app-add-indicator-form></app-add-indicator-form>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
