--- a/trading-view-bot-ui/src/app/signals/add-indicator-form/add-indicator-form.component.html
+++ b/trading-view-bot-ui/src/app/signals/add-indicator-form/add-indicator-form.component.html
@@ -3,9 +3,6 @@
   [formGroup]="addIndicatorForm"
   (ngSubmit)="onAddIndicator(addIndicatorForm.value)"
 >
-  <app-date-span-picker formControlName="dateSpan"></app-date-span-picker>
-
-  <br />
   <mat-form-field>
     <mat-label>Market</mat-label>
     <mat-select formControlName="market">
@@ -14,8 +11,8 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-
   <br />
+
   <mat-form-field>
     <mat-label>Indicator</mat-label>
     <mat-select formControlName="indicator">
@@ -24,8 +21,8 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-
   <br />
+
   <mat-form-field>
     <mat-label>Candle sizes</mat-label>
     <mat-select formControlName="candleSize">
@@ -37,42 +34,13 @@
       </mat-option>
     </mat-select>
   </mat-form-field>
-
   <br />
-  <mat-form-field>
-    <mat-label>Filter type</mat-label>
-    <mat-select formControlName="filterType">
-      <mat-option *ngFor="let filterType of filterTypes" [value]="filterType">
-        {{ filterType }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
 
-  <br />
-  <mat-form-field>
-    <mat-label>MA length</mat-label>
-    <input matInput formControlName="maLength" placeholder="length" value="0" />
-  </mat-form-field>
-
-  <br />
-  <mat-form-field>
-    <mat-label>Step</mat-label>
-    <input matInput formControlName="step" value="1" />
-  </mat-form-field>
-
-  <br />
-  <mat-form-field>
-    <mat-label>Color</mat-label>
-    <input
-      matInput
-      formControlName="color"
-      placeholder="Color"
-      value="225,100,100"
-    />
-  </mat-form-field>
-
-  <br />
-  <button>
+  <app-add-signal-form-common
+    [filterTypes]="filterTypes"
+    [group]="addIndicatorForm.get('common')"
+  ></app-add-signal-form-common>
+  <button mat-raised-button color="primary">
     Add indicator
   </button>
 </form>
