Implement multi filter selection. refs #859

--- a/trading-view-bot-ui/src/app/filtering/complex-filter/complex-filter.component.html
+++ b/trading-view-bot-ui/src/app/filtering/complex-filter/complex-filter.component.html
@@ -1,1 +1,5 @@
-<p>complex-filter works!</p>
+<app-filter-form [group]="addFilterFormGroup"></app-filter-form>
+<button mat-raised-button color="primary" (click)="onAddFilter()">
+  Add filter
+</button>
+<app-filter-list></app-filter-list>
