--- a/trading-view-bot-ui/src/app/signals/add-signal-form-common/add-signal-form-common.component.html
+++ b/trading-view-bot-ui/src/app/signals/add-signal-form-common/add-signal-form-common.component.html
@@ -18,8 +18,5 @@
   </mat-form-field>
   <br />
 
-  <app-filter-form
-    [types]="filterTypes"
-    [group]="group.get('filter')"
-  ></app-filter-form>
+  <app-complex-filter></app-complex-filter>
 </form>
