--- a/trading-view-bot-ui/src/app/filtering/filter-list/filter-list.component.html
+++ b/trading-view-bot-ui/src/app/filtering/filter-list/filter-list.component.html
@@ -1,15 +1,15 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container matColumnDef="position">
+<table mat-table [dataSource]="filters" class="mat-elevation-z8">
+  <ng-container matColumnDef="no">
     <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.no }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="type">
     <th mat-header-cell *matHeaderCellDef>Type</th>
     <td mat-cell *matCellDef="let element">{{ element.type }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="weight">
+  <ng-container matColumnDef="length">
     <th mat-header-cell *matHeaderCellDef>Length</th>
     <td mat-cell *matCellDef="let element">{{ element.length }}</td>
   </ng-container>
