--- a/trading-view-bot-ui/src/app/graph/graph.component.html
+++ b/trading-view-bot-ui/src/app/graph/graph.component.html
@@ -1,3 +1,4 @@
 <app-chart></app-chart>
 <app-add-ticker-form></app-add-ticker-form>
 <app-add-indicator-form></app-add-indicator-form>
+<app-signal-list></app-signal-list>
