Forms were replaced by dialogs. refs #803

--- a/trading-view-bot-ui/src/app/filtering/filter-list/filter-list.component.html
+++ b/trading-view-bot-ui/src/app/filtering/filter-list/filter-list.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="filters" class="mat-elevation-z8">
+<table *ngIf="!empty" mat-table [dataSource]="filters" class="mat-elevation-z8">
   <ng-container matColumnDef="no">
     <th mat-header-cell *matHeaderCellDef>No.</th>
     <td mat-cell *matCellDef="let element">{{ element.no }}</td>
