--- a/trading-view-bot-ui/src/app/graph/graph.component.html
+++ b/trading-view-bot-ui/src/app/graph/graph.component.html
@@ -1,4 +1,8 @@
 <app-chart></app-chart>
-<app-add-ticker-form></app-add-ticker-form>
-<app-add-indicator-form></app-add-indicator-form>
+<button mat-raised-button color="primary" (click)="onAddIndicator()">
+  Add indicator
+</button>
+<button mat-raised-button color="primary" (click)="onAddTicker()">
+  Add ticker
+</button>
 <app-signal-list></app-signal-list>
