Signal service was modified to be able to request both indicators and tickers.

--- a/trading-view-bot-ui/src/app/signals/add-signal-form-common/add-signal-form-common.component.html
+++ b/trading-view-bot-ui/src/app/signals/add-signal-form-common/add-signal-form-common.component.html
@@ -3,7 +3,7 @@
 
   <mat-form-field>
     <mat-label>Step</mat-label>
-    <input matInput value="1" formControlName="step" />
+    <input matInput type="number" value="1" formControlName="step" />
   </mat-form-field>
   <br />
 
