--- a/trading-view-bot-ui/src/app/graph/graph.component.html
+++ b/trading-view-bot-ui/src/app/graph/graph.component.html
@@ -1,8 +1,5 @@
 <app-chart></app-chart>
-<button mat-raised-button color="primary" (click)="onAddIndicator()">
-  Add indicator
-</button>
-<button mat-raised-button color="primary" (click)="onAddTicker()">
-  Add ticker
+<button mat-raised-button color="primary" (click)="onAddSignal()">
+  Add
 </button>
 <app-signal-list></app-signal-list>
