Replace start_date and end_date with dateSpan.

--- a/trading-view-bot-ui/src/app/filtering/complex-filter/complex-filter.component.html
+++ b/trading-view-bot-ui/src/app/filtering/complex-filter/complex-filter.component.html
@@ -1,5 +1,5 @@
 <app-filter-form [group]="addFilterFormGroup"></app-filter-form>
-<button mat-raised-button color="primary" (click)="onAddFilter()">
+<button mat-raised-button type="button" color="primary" (click)="onAddFilter()">
   Add filter
 </button>
 <app-filter-list></app-filter-list>
