--- a/trading-view-bot-ui/src/app/signals/add-indicator-form/add-indicator-form.component.html
+++ b/trading-view-bot-ui/src/app/signals/add-indicator-form/add-indicator-form.component.html
@@ -1,8 +1,4 @@
-<form
-  *ngIf="!loading"
-  [formGroup]="addIndicatorForm"
-  (ngSubmit)="onAddIndicator(addIndicatorForm.value)"
->
+<form *ngIf="!loading" [formGroup]="form" (ngSubmit)="onAddSignal()">
   <mat-form-field>
     <mat-label>Market</mat-label>
     <mat-select formControlName="market">
@@ -36,9 +32,26 @@
   </mat-form-field>
   <br />
 
-  <app-add-signal-form-common
-    [group]="addIndicatorForm.get('common')"
-  ></app-add-signal-form-common>
+  <app-date-span-picker [group]="form.get('dateSpan')"></app-date-span-picker>
+
+  <mat-form-field>
+    <mat-label>Step</mat-label>
+    <input matInput type="number" value="1" formControlName="step" />
+  </mat-form-field>
+  <br />
+
+  <mat-form-field>
+    <mat-label>Color</mat-label>
+    <input
+      matInput
+      formControlName="color"
+      placeholder="Color"
+      value="225,100,100"
+    />
+  </mat-form-field>
+  <br />
+
+  <app-complex-filter></app-complex-filter>
 
   <button mat-raised-button color="primary">
     Add indicator
