Create a normal add form.

--- a/trading-view-bot-ui/src/app/filtering/complex-filter/complex-filter.component.html
+++ b/trading-view-bot-ui/src/app/filtering/complex-filter/complex-filter.component.html
@@ -1,4 +1,4 @@
-<app-filter-form [types]="types" [group]="addFilterFormGroup"></app-filter-form>
+<app-filter-form [group]="addFilterFormGroup"></app-filter-form>
 
 <button mat-raised-button type="button" color="primary" (click)="onAddFilter()">
   Add filter
