--- a/trading-view-bot-ui/src/app/signals/signal-list/signal-list.component.html
+++ b/trading-view-bot-ui/src/app/signals/signal-list/signal-list.component.html
@@ -1,12 +1,59 @@
 <table mat-table [dataSource]="signals" class="mat-elevation-z8">
   <ng-container matColumnDef="id">
     <th mat-header-cell *matHeaderCellDef>Id</th>
-    <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.id + 1 }}</td>
   </ng-container>
 
   <ng-container matColumnDef="type">
     <th mat-header-cell *matHeaderCellDef>Type</th>
-    <td mat-cell *matCellDef="let element">{{ element.type }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.properties.type == 1 ? "Ticker" : "Indicator" }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="market">
+    <th mat-header-cell *matHeaderCellDef>Market</th>
+    <td mat-cell *matCellDef="let element">{{ element.properties.market }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="startDate">
+    <th mat-header-cell *matHeaderCellDef>Start date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.properties.dateSpan.start.toISOString() }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="endDate">
+    <th mat-header-cell *matHeaderCellDef>End date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.properties.dateSpan.end.toISOString() }}
+    </td>
+  </ng-container>
+
+  <ng-container matColumnDef="color">
+    <th mat-header-cell *matHeaderCellDef>Color</th>
+    <td mat-cell *matCellDef="let element">{{ element.properties.color }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="step">
+    <th mat-header-cell *matHeaderCellDef>Step</th>
+    <td mat-cell *matCellDef="let element">{{ element.properties.step }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="controls" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef>
+      <button mat-flat-button color="primary" (click)="onAddSignal()">
+        <mat-icon mat-list-icon>add</mat-icon>
+      </button>
+    </th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-flat-button (click)="editSignal(element.id)">
+        <mat-icon mat-list-icon>edit</mat-icon>
+      </button>
+      <button mat-flat-button (click)="deleteSignal(element.id)">
+        <mat-icon mat-list-icon>delete</mat-icon>
+      </button>
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
