Rename to trader bot

--- a/trader-bot-ui/src/app/navbar/navbar.component.html
+++ b/trader-bot-ui/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <span>Trading View Bot</span>
+    <span>Trader Bot</span>
     <span class="navbar-spacer"></span>
 
     <button mat-icon-button (click)="onLogOut()">
